--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vee-validate/i18n": "^4.12.3",
+    "@vee-validate/rules": "^4.12.3",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "crypto-js": "^4.2.0",
+    "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
