--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "@popperjs/core": "^2.11.8",
     "@vee-validate/i18n": "^4.12.3",
     "@vee-validate/rules": "^4.12.3",
     "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "core-js": "^3.8.3",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.4.4",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.3.0",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
