--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-chartjs": "^5.3.0",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
+    "vue3-loading-overlay": "^0.0.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
