--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto-js": "^4.2.0",
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.0",
     "vue-jwt-decode": "^0.1.0",
