--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.0",
+    "vue-i18n": "^9.13.1",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
     "vuex": "^4.1.0"
