--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "@popperjs/core": "^2.11.8",
-    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
@@ -19,12 +18,14 @@
     "element-plus": "^2.4.4",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
     "vue-chartjs": "^5.3.0",
     "vue-i18n": "^9.13.1",
     "vue-jwt-decode": "^0.1.0",
     "vue-router": "^4.2.5",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
