--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sockjs-client": "^1.6.1",
+    "sortablejs": "^1.15.2",
     "vue": "^3.2.13",
     "vue-i18n": "^9.13.1",
     "vue-jwt-decode": "^0.1.0",
