update nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 server {
-	#監聽本地端口localhost:80(前端)
 	listen 8082;
-	server_name erp-base;
+	server_name erp-view;
 
 	location / {
 		root /usr/share/nginx/html;
