--- a/nginx.conf
+++ b/nginx.conf
@@ -11,4 +11,13 @@ server {
 		# /api請求代理到後端
 		proxy_pass http://erp-base:8081/;  
 	}
+
+    location /erp_base/ws {
+        # WebSocket 代理到後端
+        proxy_pass http://erp-base:8081/erp_base/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+    }
 }
