--- a/erp-view-deployment.yml
+++ b/erp-view-deployment.yml
@@ -19,6 +19,7 @@ spec:
       containers:
       - name: erp-view
         image: ryanimay840121/erp-view:latest
+        imagePullPolicy: Always
         ports:
           - containerPort: 8082
           
@@ -28,9 +29,10 @@ kind: Service
 metadata:
   name: erp-view
 spec:
-  type: ClusterIP
+  type: NodePort
   ports:
     - port: 8082
       targetPort: 8082
+      nodePort: 30003
   selector:
     app: erp-view
