--- a/nginx.conf
+++ b/nginx.conf
@@ -10,17 +10,16 @@ server {
 		# /api請求代理到後端
 		proxy_pass http://erp-base:8081/;  
 	}
-    
-    # 正式環境改走ingress因為會和HTTPS的配置衝突
-    # location /erp_base/ws {
-    #     # WebSocket 代理到後端
-    #     proxy_pass http://erp-base:8081/erp_base/ws;
-    #     proxy_http_version 1.1;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "Upgrade";
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+
+    location /erp_base/ws {
+        # WebSocket 代理到後端
+        proxy_pass http://erp-base:8081/erp_base/ws;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
